[metadata]
name = pyprotondb
version = 0.1.0
author = Sarvesh J
author_email = sarveshjrgar@gmail.com
description = A lightweight Python client for interacting with a ProtonDB-like server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sarveshsarvs/ProtonDB/tree/master/Wrapper/pyproton
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
